--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Speak Number Guess</title>
   </head>
   <body>
-    <img src="img/mic.png" alt="Speak" />
+    <img src="mic.png" alt="Speak" />
     <h1>Guess a Number Between 1 - 100</h1>
     <h3>Speak the number into your microphone</h3>
     <div id="msg" class="msg"></div>
