--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
     <h3>Speak the number into your microphone</h3>
     <div id="msg" class="msg"></div>
   </body>
+  <script src="script.js"></script>
 </html>
