--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Speak Number Guess</title>
   </head>
   <body>
-    <img src="mic.png" alt="Speak" />
+    <img
+      src="https://raw.githubusercontent.com/bradtraversy/vanillawebprojects/master/speak-number-guess/img/mic.png"
+      alt="Speak"
+    />
     <h1>Guess a Number Between 1 - 100</h1>
     <h3>Speak the number into your microphone</h3>
     <div id="msg" class="msg"></div>
